--- a/src/_layouts/post.html
+++ b/src/_layouts/post.html
@@ -27,5 +27,5 @@ layout: default
 </article>
 
 <!-- Custom JS -->
-<script src='/js/video.js'></script>
+<script src='/js/potato.js'></script>
 <!-- /Custom JS -->
